syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.kharvest";
option java_outer_classname = "KharvestProto";

package kharvest;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// The greeting service definition.
service Kharvest {
  // Sends a greeting
  rpc Notify (DataSignature) returns (NotifyReply) {}
  rpc Store (Data) returns (StoreReply) {}
}

service KharvestUserAPI {
	//Keys return the key strings generated from the content of the store
	rpc Keys (google.protobuf.Empty) returns (KeysReply) {}
  
  //GetSameReferences return all the references to the same data
  rpc SameReferences (DataSignature) returns (DataSignatures) {}
  
  //GetPodReferences return all the references for a given pod
	rpc PodReferences (PodIdentifier) returns (DataSignatures) {}
  
  //GetReferencesAt return all the references for a given pod
  rpc ReferencesAt (TimeFrame) returns (DataSignatures) {}
  
	//GetReferencesForMeta return all the references for a KV metadata
	rpc ReferencesForMeta (KeyValuePair) returns (DataSignatures) {}
}

message KeysReply {
  repeated string keys =1;
}

// The request message containing the user's name.
message DataSignature {
  string filename =1;
  google.protobuf.Timestamp timestamp=2;
  string md5=3;
  string namespace=4;
  string podName=5;
  map<string,string> metadata=6;
}

message TimeFrame {
  google.protobuf.Timestamp from =1;
  google.protobuf.Timestamp to =2;
}

message KeyValuePair {
  string key =1;
  string pair =2;
}

message PodIdentifier {
  string podName =1;
  string namespace =2;
}

message DataSignatures {
  repeated DataSignature signatures = 1;
}

message NotifyReply {
  enum Action {
    ACK = 0;
    STORE_REQUESTED = 1;
  }
  Action action =1;
}

// The response message containing the greetings
message Data {
  DataSignature signature = 1;
  bytes data =2; 
}

// The response message containing the greetings
message StoreReply {
  enum Action {
    STORED = 0;
    ERROR = 1;
  }
}
